# molecular-line-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/demo/: demo_rotational_lines.csv  synthetic_line_cube.fits  transitions_demo.csv
docs/: README.md  cv_bullets.md  project_summary.md  rotational_diagram_assumptions.md
figures/: README.md
notebooks/: 01_datacube_loading_and_moment_maps.ipynb  02_line_identification_and_gaussian_fitting.ipynb  03_rotational_diagram_LTE.ipynb  README.md
results/: README.md
src/molecular_conditions/: __init__.py  __main__.py  datacube.py  demo_data.py  fitting.py  moments.py  radex_grid.py  rotational_diagram.py  spectra.py  transitions.py
tests/: conftest.py  test_imports.py  test_milestone2_workflow.py  test_milestone3_line_fitting.py  test_milestone4_rotational_diagram.py
