[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular-line-conditions"
version = "0.1.0"
description = "Synthetic molecular-line datacube analysis and LTE rotational-diagram workflow."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
  { name = "Research Portfolio Project" }
]
dependencies = [
  "astropy>=6.0",
  "spectral-cube>=0.6",
  "radio-beam>=0.3",
  "specutils>=1.14",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "jupyter>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
notebooks = [
  "jupyterlab>=4.0",
  "ipykernel>=6.0"
]

[project.scripts]
molecular-conditions = "molecular_conditions.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
